Setup SSH keys during provision automatically
I took this snippet from the remote_execution plugin, so perhaps the
name should be changed to just 'setup_ssh_keys'.

This change should allow people to set a global or per-host/group
parameter that sets up SSH authorized_keys automatically on new hosts.

We can document this on the manual on a section 'how to set up
automatic SSH authorized_keys'.

--- a/autoyast/provision.erb
+++ b/autoyast/provision.erb
@@ -135,6 +135,8 @@ chkconfig salt-minion on
 salt-call --no-color --grains >/dev/null
 <% end -%>
 
+<%= snippet('remote_execution_ssh_keys') %>
+
 /usr/bin/curl -o /dev/null -k '<%= foreman_url %>'
 
 rm /etc/resolv.conf
