--- a/provisioning_templates/snippet/create_users.erb
+++ b/provisioning_templates/snippet/create_users.erb
@@ -12,9 +12,9 @@ snippet: true
 <%-     index = 0 -%>
 <%-     user.ssh_keys.each do |key| -%>
 <%-       if index == 0 -%>
-<%=        "#{key.type} #{key.ssh_key} #{key.comment}" %>
+<%=        "#{key.ssh_key} #{key.comment}" %>
 <%-       else -%>
-<%=        "#{key.type} #{key.ssh_key} #{key.comment} - #{index}" %>
+<%=        "#{key.ssh_key} #{key.comment} - #{index}" %>
 <%-       end -%>
 <%-       index += 1 -%>
 <%-     end -%>
