Trigger kickstart networking provisioning with only IPv6
If a host has managed IPv6 networks, but no IPv4, the kickstart will
not even try to configure it. This change allows to configure if:

Only IPv4 is present
Only IPv6 is present
Both IPv4 and IPv6 are present

--- a/provisioning_templates/provision/kickstart_default.erb
+++ b/provisioning_templates/provision/kickstart_default.erb
@@ -137,7 +137,7 @@ exec < /dev/tty3 > /dev/tty3
 #changing to VT 3 so that we can see whats going on....
 /usr/bin/chvt 3
 (
-<% if subnet.respond_to?(:dhcp_boot_mode?) -%>
+<% if subnet.respond_to?(:dhcp_boot_mode?) || @host.subnet6.respond_to?(:dhcp_boot_mode?) -%>
 <%= snippet 'kickstart_networking_setup' %>
 <% end -%>
 
