--- a/provisioning_templates/provision/kickstart_default.erb
+++ b/provisioning_templates/provision/kickstart_default.erb
@@ -192,14 +192,7 @@ yum -t -y remove kernel-uek*
 sed -e 's/DEFAULTKERNEL=kernel-uek/DEFAULTKERNEL=kernel/g' -i /etc/sysconfig/kernel
 <% end -%>
 
-<% if realm_compatible && host_param_true?('ansible_tower_provisioning') %>
-# This is RHEL7 specific code, as it uses systemctl, replace with
-# chkconfig or an @boot cron if you run RHEL5 or RHEL6
-<%= save_to_file('/etc/systemd/system/ansible-callback.service',
-                 snippet('ansible_tower_callback_service')) %>
-# Runs during first boot, removes itself
-/usr/bin/systemctl enable ansible-callback
-<% end -%>
+<%= snippet('ansible_provisioning_callback') %>
 
 sync
 
